force-app/main/default/objects/Freight_Price_Mapping__mdt/Freight_Price_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Freight Price Mapping</label>
    <pluralLabel>Freight Price Mappings</pluralLabel>
</CustomObject>