force-app/main/default/objects/Freight_Price_Mapping__mdt/fields/Tata_Ace__c.field-meta.xml
<CustomField>
    <fullName>Tata_Ace__c</fullName>
    <label>Tata Ace</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>