force-app/main/default/objects/Freight_Price_Mapping__mdt/fields/X14__c.field-meta.xml
<CustomField>
    <fullName>X14__c</fullName>
    <label>14</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>