force-app/main/default/objects/Freight_Price_Mapping__mdt/fields/X17__c.field-meta.xml
<CustomField>
    <fullName>X17__c</fullName>
    <label>17</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>