force-app/main/default/objects/Freight_Price_Mapping__mdt/fields/X19__c.field-meta.xml
<CustomField>
    <fullName>X19__c</fullName>
    <label>19</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>